--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,24 @@
         "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'"
     },
     "dependencies": {
+        "classnames": "^2.3.1",
+        "formik": "^2.2.9",
+        "js-cookie": "^3.0.0",
         "next": "^11.0.1",
         "next-compose-plugins": "^2.2.1",
+        "next-seo": "^4.26.0",
         "next-translate": "^1.0.1",
         "prettier": "^2.2.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-icons": "^4.2.0",
+        "react-markdown": "^6.0.3",
         "sass": "^1.32.5",
+        "yup": "^0.32.9",
         "zustand": "^3.5.7"
     },
     "devDependencies": {
+        "@types/js-cookie": "^2.2.7",
         "@types/node": "^14.14.13",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
