--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
         "zustand": "^3.5.7"
     },
     "devDependencies": {
+        "@types/cookie": "^0.4.1",
         "@types/js-cookie": "^2.2.7",
         "@types/node": "^14.14.13",
         "@types/react": "^17.0.0",
