--- a/backend/api/global/models/global.settings.json
+++ b/backend/api/global/models/global.settings.json
@@ -13,6 +13,9 @@
   "pluginOptions": {
     "i18n": {
       "localized": true
+    },
+    "preview-content": {
+      "previewable": true
     }
   },
   "attributes": {
@@ -23,6 +26,9 @@
       "pluginOptions": {
         "i18n": {
           "localized": true
+        },
+        "preview-content": {
+          "previewable": true
         }
       }
     },
@@ -32,20 +38,24 @@
       "pluginOptions": {
         "i18n": {
           "localized": true
+        },
+        "preview-content": {
+          "previewable": true
         }
       }
     },
     "favicon": {
       "model": "file",
       "via": "related",
-      "allowedTypes": [
-        "images"
-      ],
+      "allowedTypes": ["images"],
       "plugin": "upload",
       "required": false,
       "pluginOptions": {
         "i18n": {
           "localized": true
+        },
+        "preview-content": {
+          "previewable": true
         }
       }
     },
@@ -56,6 +66,9 @@
       "pluginOptions": {
         "i18n": {
           "localized": true
+        },
+        "preview-content": {
+          "previewable": true
         }
       }
     },
@@ -66,6 +79,9 @@
       "pluginOptions": {
         "i18n": {
           "localized": true
+        },
+        "preview-content": {
+          "previewable": true
         }
       }
     },
@@ -76,6 +92,9 @@
       "pluginOptions": {
         "i18n": {
           "localized": true
+        },
+        "preview-content": {
+          "previewable": true
         }
       }
     }
