--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'"
     },
     "dependencies": {
+        "@headlessui/react": "^1.4.0",
         "classnames": "^2.3.1",
         "formik": "^2.2.9",
         "js-cookie": "^3.0.0",
