fix: modal elements v2

--- a/backend/api/page/models/page.settings.json
+++ b/backend/api/page/models/page.settings.json
@@ -62,7 +62,8 @@
         "sections.rich-text",
         "sections.pricing",
         "sections.lead-form",
-        "sections.embed-video"
+        "sections.embed-video",
+        "sections.modal-content"
       ],
       "pluginOptions": {
         "i18n": {
