--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "strapi-plugin-preview-content": "^1.3.1",
     "strapi-plugin-upload": "3.6.6",
     "strapi-plugin-users-permissions": "3.6.6",
+    "strapi-provider-email-nodemailer": "^3.6.8",
     "strapi-utils": "3.6.6"
   },
   "author": {
