--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
         "classnames": "^2.3.1",
         "formik": "^2.2.9",
         "js-cookie": "^3.0.0",
-        "next": "^11.0.1",
+        "next": "11.0.1",
         "next-compose-plugins": "^2.2.1",
         "next-seo": "^4.26.0",
         "next-translate": "^1.0.1",
@@ -23,6 +23,7 @@
         "react-dom": "^17.0.2",
         "react-icons": "^4.2.0",
         "react-markdown": "^6.0.3",
+        "react-responsive-carousel": "^3.2.21",
         "sass": "^1.32.5",
         "yup": "^0.32.9",
         "zustand": "^3.5.7"
