--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "next-compose-plugins": "^2.2.1",
         "next-seo": "^4.26.0",
         "next-translate": "^1.0.1",
+        "plaiceholder": "^2.0.1",
         "prettier": "^2.2.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -25,6 +26,7 @@
         "react-markdown": "^6.0.3",
         "react-responsive-carousel": "^3.2.21",
         "sass": "^1.32.5",
+        "sharp": "^0.29.0",
         "yup": "^0.32.9",
         "zustand": "^3.5.7"
     },
