--- a/backend/package.json
+++ b/backend/package.json
@@ -11,22 +11,24 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "knex": "0.21.18",
-    "sqlite3": "5.0.0",
-    "strapi": "3.6.6",
-    "strapi-admin": "3.6.6",
-    "strapi-connector-bookshelf": "3.6.6",
+    "knex": "^0.21.18",
+    "pg": "^8.6",
+    "pg-connection-string": "^2.5.0",
+    "sqlite3": "^5.0.0",
+    "strapi": "^3.6.6",
+    "strapi-admin": "^3.6.6",
+    "strapi-connector-bookshelf": "^3.6.6",
     "strapi-helper-plugin": "^3.6.6",
-    "strapi-plugin-content-manager": "3.6.6",
-    "strapi-plugin-content-type-builder": "3.6.6",
-    "strapi-plugin-email": "3.6.6",
-    "strapi-plugin-graphql": "3.6.6",
-    "strapi-plugin-i18n": "3.6.6",
+    "strapi-plugin-content-manager": "^3.6.6",
+    "strapi-plugin-content-type-builder": "^3.6.6",
+    "strapi-plugin-email": "^3.6.6",
+    "strapi-plugin-graphql": "^3.6.6",
+    "strapi-plugin-i18n": "^3.6.6",
     "strapi-plugin-preview-content": "^1.3.1",
-    "strapi-plugin-upload": "3.6.6",
-    "strapi-plugin-users-permissions": "3.6.6",
+    "strapi-plugin-upload": "^3.6.6",
+    "strapi-plugin-users-permissions": "^3.6.6",
     "strapi-provider-email-nodemailer": "^3.6.8",
-    "strapi-utils": "3.6.6"
+    "strapi-utils": "^3.6.6"
   },
   "author": {
     "name": "A Strapi developer"
