add new collections types (blog) and some setting for cloudinary

--- a/backend/api/page/models/page.settings.json
+++ b/backend/api/page/models/page.settings.json
@@ -8,16 +8,11 @@
   "options": {
     "increments": true,
     "timestamps": true,
-    "draftAndPublish": false
+    "draftAndPublish": true
   },
   "pluginOptions": {
     "i18n": {
       "localized": true
-    },
-    "preview-content": {
-      "previewable": true,
-      "url": "http://localhost:3000/api/preview?&secret=yuhu&slug=<%= slug %>",
-      "usesValuesInUrl": true
     }
   },
   "attributes": {
@@ -26,11 +21,6 @@
       "pluginOptions": {
         "i18n": {
           "localized": true
-        },
-        "preview-content": {
-          "previewable": true,
-          "url": "http://localhost:3000/api/preview?&secret=yuhu&slug=<%= slug %>",
-          "usesValuesInUrl": true
         }
       }
     },
@@ -42,11 +32,6 @@
       "pluginOptions": {
         "i18n": {
           "localized": true
-        },
-        "preview-content": {
-          "previewable": true,
-          "url": "http://localhost:3000/api/preview?&secret=yuhu&slug=<%= slug %>",
-          "usesValuesInUrl": true
         }
       }
     },
@@ -69,30 +54,17 @@
       "pluginOptions": {
         "i18n": {
           "localized": true
-        },
-        "preview-content": {
-          "previewable": true,
-          "url": "http://localhost:3000/api/preview?&secret=yuhu&slug=<%= slug %>",
-          "usesValuesInUrl": true
         }
       }
     },
     "status": {
       "type": "enumeration",
-      "enum": [
-        "published",
-        "draft"
-      ],
+      "enum": ["published", "draft"],
       "default": "draft",
       "required": true,
       "pluginOptions": {
         "i18n": {
           "localized": true
-        },
-        "preview-content": {
-          "previewable": true,
-          "url": "http://localhost:3000/api/preview?&secret=yuhu&slug=<%= slug %>",
-          "usesValuesInUrl": true
         }
       }
     },
@@ -100,11 +72,6 @@
       "pluginOptions": {
         "i18n": {
           "localized": false
-        },
-        "preview-content": {
-          "previewable": true,
-          "url": "http://localhost:3000/api/preview?&secret=yuhu&slug=<%= slug %>",
-          "usesValuesInUrl": true
         }
       },
       "type": "string",
