--- a/backend/api/blogs/models/blogs.settings.json
+++ b/backend/api/blogs/models/blogs.settings.json
@@ -16,21 +16,12 @@
     }
   },
   "attributes": {
-    "Photo": {
-      "collection": "file",
-      "via": "related",
-      "allowedTypes": ["images", "files", "videos"],
-      "plugin": "upload",
-      "required": false,
-      "pluginOptions": {
-        "i18n": {
-          "localized": true
-        }
-      }
-    },
     "status": {
       "type": "enumeration",
-      "enum": ["published", "draft"],
+      "enum": [
+        "published",
+        "draft"
+      ],
       "default": "draft",
       "required": true,
       "pluginOptions": {
@@ -50,7 +41,41 @@
     },
     "contentSections": {
       "type": "dynamiczone",
-      "components": ["sections.hero-blogs"],
+      "components": [
+        "sections.hero-blogs"
+      ],
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
+    },
+    "metaTitle": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "string"
+    },
+    "metaDescription": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "string"
+    },
+    "shareImage": {
+      "collection": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
       "pluginOptions": {
         "i18n": {
           "localized": true
