feat: add strapi navigation plugin

--- a/backend/api/blogs/models/blogs.settings.json
+++ b/backend/api/blogs/models/blogs.settings.json
@@ -15,13 +15,24 @@
       "localized": true
     }
   },
+  "navigation": {
+    "model": "navigationitem",
+    "plugin": "navigation",
+    "via": "related",
+    "configurable": false,
+    "hidden": true
+  },
   "attributes": {
+    "navigation": {
+      "model": "navigationitem",
+      "plugin": "navigation",
+      "via": "related",
+      "configurable": false,
+      "hidden": true
+    },
     "status": {
       "type": "enumeration",
-      "enum": [
-        "published",
-        "draft"
-      ],
+      "enum": ["published", "draft"],
       "default": "draft",
       "required": true,
       "pluginOptions": {
@@ -41,9 +52,7 @@
     },
     "contentSections": {
       "type": "dynamiczone",
-      "components": [
-        "sections.hero-blogs"
-      ],
+      "components": ["sections.hero-blogs"],
       "pluginOptions": {
         "i18n": {
           "localized": true
@@ -69,11 +78,7 @@
     "shareImage": {
       "collection": "file",
       "via": "related",
-      "allowedTypes": [
-        "images",
-        "files",
-        "videos"
-      ],
+      "allowedTypes": ["images", "files", "videos"],
       "plugin": "upload",
       "required": false,
       "pluginOptions": {
