--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "strapi-plugin-email": "^3.6.6",
     "strapi-plugin-graphql": "^3.6.6",
     "strapi-plugin-i18n": "^3.6.6",
+    "strapi-plugin-navigation": "^1.0.4",
     "strapi-plugin-preview-content": "^1.3.1",
     "strapi-plugin-upload": "^3.6.6",
     "strapi-plugin-users-permissions": "^3.6.6",
