--- a/backend/api/blogs/models/blogs.settings.json
+++ b/backend/api/blogs/models/blogs.settings.json
@@ -16,28 +16,15 @@
     }
   },
   "attributes": {
-    "status": {
-      "type": "enumeration",
-      "enum": [
-        "published",
-        "draft"
-      ],
-      "default": "draft",
-      "required": true,
+    "slug": {
       "pluginOptions": {
         "i18n": {
           "localized": true
         }
-      }
-    },
-    "slug": {
-      "pluginOptions": {
-        "i18n": {
-          "localized": false
-        }
       },
       "type": "string",
-      "regex": "^$|^[a-zA-Z/-]+$"
+      "regex": "^$|^[a-zA-Z/-]+$",
+      "unique": true
     },
     "contentSections": {
       "type": "dynamiczone",
@@ -81,6 +68,14 @@
           "localized": true
         }
       }
+    },
+    "title": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "string"
     }
   }
 }
