--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
         "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'"
     },
     "dependencies": {
-        "@headlessui/react": "^1.4.0",
+        "@headlessui/react": "^1.4.1",
         "classnames": "^2.3.1",
+        "eslint-config-airbnb": "^18.2.1",
         "formik": "^2.2.9",
         "js-cookie": "^3.0.0",
         "next": "11.0.1",
         "next-compose-plugins": "^2.2.1",
+        "next-mdx-remote": "^3.0.4",
         "next-seo": "^4.26.0",
         "next-translate": "^1.0.1",
         "plaiceholder": "^2.0.1",
@@ -25,6 +27,7 @@
         "react-icons": "^4.2.0",
         "react-markdown": "^6.0.3",
         "react-responsive-carousel": "^3.2.21",
+        "rehype-sanitize": "^5.0.0",
         "sass": "^1.32.5",
         "sharp": "^0.29.0",
         "yup": "^0.32.9",
@@ -39,12 +42,20 @@
         "@typescript-eslint/eslint-plugin": "^4.9.1",
         "@typescript-eslint/parser": "^4.9.1",
         "autoprefixer": "^10.1.0",
-        "eslint": "^7.15.0",
         "eslint-config-next": "^11.1.0",
-        "eslint-config-prettier": "^7.0.0",
-        "eslint-plugin-prettier": "^3.2.0",
+        "eslint": "7.23.0",
+        "eslint-config-airbnb": "18.2.1",
+        "eslint-config-prettier": "8.1.0",
+        "eslint-import-resolver-typescript": "2.4.0",
+        "eslint-plugin-import": "2.22.1",
+        "eslint-plugin-jsx-a11y": "6.4.1",
+        "eslint-plugin-prettier": "3.3.1",
+        "eslint-plugin-react": "7.23.1",
+        "eslint-plugin-react-hooks": "4.2.0",
         "postcss": "^8.2.4",
         "tailwindcss": "^2.0.2",
-        "typescript": "^4.1.3"
+        "typescript": "^4.1.3",
+        "lint-staged": "10.5.4",
+        "prettier": "2.2.1"
     }
 }
