--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,61 +1,86 @@
 {
-    "name": "project",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
-        "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'"
-    },
-    "dependencies": {
-        "@headlessui/react": "^1.4.1",
-        "classnames": "^2.3.1",
-        "eslint-config-airbnb": "^18.2.1",
-        "formik": "^2.2.9",
-        "js-cookie": "^3.0.0",
-        "next": "11.0.1",
-        "next-compose-plugins": "^2.2.1",
-        "next-mdx-remote": "^3.0.4",
-        "next-seo": "^4.26.0",
-        "next-translate": "^1.0.1",
-        "plaiceholder": "^2.0.1",
-        "prettier": "^2.2.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-icons": "^4.2.0",
-        "react-markdown": "^6.0.3",
-        "react-responsive-carousel": "^3.2.21",
-        "rehype-sanitize": "^5.0.0",
-        "sass": "^1.32.5",
-        "sharp": "^0.29.0",
-        "yup": "^0.32.9",
-        "zustand": "^3.5.7"
-    },
-    "devDependencies": {
-        "@types/cookie": "^0.4.1",
-        "@types/js-cookie": "^2.2.7",
-        "@types/node": "^14.14.13",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
-        "@typescript-eslint/eslint-plugin": "^4.9.1",
-        "@typescript-eslint/parser": "^4.9.1",
-        "autoprefixer": "^10.1.0",
-        "eslint-config-next": "^11.1.0",
-        "eslint": "7.23.0",
-        "eslint-config-airbnb": "18.2.1",
-        "eslint-config-prettier": "8.1.0",
-        "eslint-import-resolver-typescript": "2.4.0",
-        "eslint-plugin-import": "2.22.1",
-        "eslint-plugin-jsx-a11y": "6.4.1",
-        "eslint-plugin-prettier": "3.3.1",
-        "eslint-plugin-react": "7.23.1",
-        "eslint-plugin-react-hooks": "4.2.0",
-        "postcss": "^8.2.4",
-        "tailwindcss": "^2.0.2",
-        "typescript": "^4.1.3",
-        "lint-staged": "10.5.4",
-        "prettier": "2.2.1"
+  "name": "typescript-nextjs-starter",
+  "description": "A TypeScript starter for Next.js that includes all you need to build amazing projects",
+  "version": "1.0.0",
+  "private": true,
+  "author": "João Pedro Schmitz <hey@joaopedro.dev> (@jpedroschmitz)",
+  "license": "MIT",
+  "keywords": [
+    "nextjs",
+    "starter",
+    "typescript"
+  ],
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "type-check": "tsc",
+    "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\"",
+    "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
+    "postinstall": "husky install",
+    "commit": "cz"
+  },
+  "lint-staged": {
+    "./src/**/*.{ts,js,jsx,tsx}": [
+      "yarn lint --fix",
+      "yarn format"
+    ]
+  },
+  "dependencies": {
+    "@headlessui/react": "1.4.1",
+    "classnames": "2.3.1",
+    "formik": "2.2.9",
+    "js-cookie": "3.0.0",
+    "next": "11.0.1",
+    "next-compose-plugins": "2.2.1",
+    "next-mdx-remote": "3.0.4",
+    "next-seo": "4.26.0",
+    "next-translate": "1.0.1",
+    "plaiceholder": "2.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "4.2.0",
+    "react-markdown": "6.0.3",
+    "react-responsive-carousel": "3.2.21",
+    "rehype-sanitize": "5.0.0",
+    "sass": "1.32.5",
+    "sharp": "0.29.0",
+    "yup": "0.32.9",
+    "zustand": "3.5.7"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "13.1.0",
+    "@commitlint/config-conventional": "13.1.0",
+    "@types/cookie": "0.4.1",
+    "@types/js-cookie": "2.2.7",
+    "@types/node": "14.17.15",
+    "@types/react": "17.0.21",
+    "@types/react-dom": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "4.31.1",
+    "@typescript-eslint/parser": "4.31.1",
+    "autoprefixer": "10.3.6",
+    "commitizen": "4.2.4",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-import-resolver-typescript": "2.5.0",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "husky": "7.0.2",
+    "lint-staged": "11.1.2",
+    "postcss": "8.3.8",
+    "prettier": "2.4.0",
+    "tailwindcss": "2.2.16",
+    "typescript": "4.4.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
     }
+  }
 }
