--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "knex": "^0.21.18",
     "pg": "^8.6",
     "pg-connection-string": "^2.5.0",
+    "sharp": "^0.29.1",
     "slugify": "^1.6.0",
     "sqlite3": "^5.0.0",
     "strapi": "^3.6.6",
